edifact-edi/2.1/modules/ROOT/pages/edifact-edi-connector-xml-maven.adoc
= EDIFACT EDI - XML and Maven Support - Mule 4
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
Although you can manually code a Mule app in XML, it is more efficient to use Anypoint Studio:
* If you manually code a Mule runtime engine (Mule) app in XML either from the Anypoint Studio XML editor or from a text editor, you can access the connector from your app by adding reference statements to both your XML Mule flow and the Apache Maven `pom.xml` file.
* If you add the connector in Studio, Studio automatically populates the XML code with the connector's namespace and schema location and it also adds a dependency to the `pom.xml` file.
== Add a Namespace for the Connector
Paste the following code inside the `mule` tag of the header
of your configuration XML:
[source,xml,linenums]
----
http://www.mulesoft.org/schema/mule/edifact-edi
http://www.mulesoft.org/schema/mule/edifact-edi/current/mule-edifact-edi.xsd
----
This example shows how the namespace statements are placed in the XML:
[source,xml,linenums]
----
<mule xmlns:$2="http://www.mulesoft.org/schema/mule/edifact-edi"
	xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core"
	xmlns:http="http://www.mulesoft.org/schema/mule/http"
	xmlns:file="http://www.mulesoft.org/schema/mule/file"
	xmlns="http://www.mulesoft.org/schema/mule/core"
	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core
	http://www.mulesoft.org/schema/mule/core/current/mule.xsd
	http://www.mulesoft.org/schema/mule/file
	http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
	http://www.mulesoft.org/schema/mule/http
	http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
	http://www.mulesoft.org/schema/mule/ee/core
	http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd
	http://www.mulesoft.org/schema/mule/edifact-edi
	http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd">
----
// Ensure that XML code examples have line breaks after XML elements
// to reduce the need for users to scroll the code horizontally to read it.
== Add a POM File Dependency
The Apache Maven `pom.xml` file generated by Anypoint Studio contains dependencies
for a Mule app. When you code a Mule app manually, include this XML snippet in
your `pom.xml` file to enable access to this connector:
[source,xml,linenums]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>artificat-id-from-exchange</artifactId>
  <version>2.2</version>
  <classifier>mule-plugin</classifier>
</dependency>
----
// Writer: Replace the groupID and artifactId with the correct information from Exchange.
Replace `<version>` with the version that corresponds to the connector you are using.
To obtain the most up-to-date `pom.xml` file information:
. Go to https://www.mulesoft.com/exchange/[Anypoint Exchange].
. In Exchange, click *Login* and supply your Anypoint Platform username and password.
. In Exchange, search for `EDIFACT EDI`.
. Select the connector.
. Click *Dependency Snippets* near the upper right of the screen.
== Next Step
After completing your namespace and `pom.xml` file, you can try
the xref:edifact-edi-connector-examples.adoc[Examples].
== See Also
* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
